profiling-using-exp-runner/backup_FINAL_RESULTS/hessian_experiment/run_4_repetition_0/energibridge.log
sampling interval: 200, target function: hessian_cache, input size: 50
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import cpu.hesssian as module; x_array = np.random.rand(50);x_tuple = tuple(x_array); module.hessian_cache(x_tuple)
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.995482501983642 for 0.23343195 sec of execution.
